--- a/.github/workflows/playwright-run.yml
+++ b/.github/workflows/playwright-run.yml
@@ -146,6 +146,6 @@ jobs:
       - name: Report URLs
         run: |
           echo "Reports Published!"
-          echo "Playwright Built-in: https://naveenanimation20.github.io/June2025PWFramework/playwright-report/index.html"
-          echo "Playwright HTML Reporter: https://naveenanimation20.github.io/June2025PWFramework/playwright-html-report/index.html"
-          echo "Allure: https://naveenanimation20.github.io/June2025PWFramework/allure-report/index.html"
+          echo "Playwright Built-in: https://AnupamaRamu.github.io/PlaywrightJune2025/playwright-report/index.html"
+          echo "Playwright HTML Reporter: https://AnupamaRamu.github.io/PlaywrightJune2025/playwright-html-report/index.html"
+          echo "Allure: https://AnupamaRamu.github.io/PlaywrightJune2025/allure-report/index.html"
